// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayCard should render 1`] = `
<div
  data-testid="Progress"
>
  <div
    class="sc-bdfBwQ jQpUoF"
  >
    Tasks complete
  </div>
  <div
    class="sc-gsTCUz kNNvzq"
  />
</div>
`;

exports[`OverlayCard should render label 1`] = `
Array [
  <div
    class="sc-bdfBwQ jQpUoF"
  >
    Tasks complete
  </div>,
]
`;
